aading some more pages

--- a/Kilimanjaros/k2.html
+++ b/Kilimanjaros/k2.html
@@ -87,7 +87,6 @@
                                 <ul class="menu">
                                     <li><a href="../../index.html" class="link-nav">Home</a></li>
                                     <li><a href="../../about.html" class="link-nav">About</a></li>
-                                    <li><a href="../../services.html">Services</a></li>
                                     <li>
                                         <!-- First Tier Drop Down -->
                                         <label for="drop-2" class="toggle toogle-2">Safaris <span
@@ -122,13 +121,12 @@
                                         <input type="checkbox" id="drop-4" />
                                         <ul>
                                             <li><a href="../parks/daytour.html">Day Tour</a></li>
-                                            <li><a href="../parks/cycling.html">Cycling Tour </a></li>
-                                            <li><a href="../../Maasai.html">Maasai Cultural Tour</a></li>
+                                            <li><a href="/Maasai.html">Maasai Cultural Tour</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="../../book.html" class="link-nav">Contact</a></li>
+                                    <li><a href="/contact.html" class="link-nav">Contact</a></li>
                                     <li class="nav-right-sty">
-                                        <a href="../../book.html" class="actionbg">Book Now</a>
+                                        <a href="/book.html" class="actionbg">Book Now</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -217,7 +215,7 @@
                                     <li>Day 5 : BARRANCO CAMP - KARANGA CAMP</li>
                                     <li>Day 6 : KARANGA CAMP - BARAFU CAMP</li>
                                     <li>Day 7 : BARAFU CAMP - UHURU PEAK - MWEKA CAMP</li>
-                                    <li>Day 7 : MWEKA CAMP - MWEKA GATE - ARUSHA CITY</li>
+                                    <li>Day 8 : MWEKA CAMP - MWEKA GATE - ARUSHA CITY</li>
                                 </div>
                             </div>
                         </div>
