--- a/Maasai.html
+++ b/Maasai.html
@@ -111,7 +111,6 @@
                                         <input type="checkbox" id="drop-4" />
                                         <ul>
                                             <li><a href="./assets/parks/daytour.html">Day Tour</a></li>
-                                            <li><a href="./assets/parks/cycling.html">Cycling Tour </a></li>
                                             <li><a href="./Maasai.html">Maasai Cultural Tour</a></li>
                                         </ul>
                                     </li>
@@ -160,6 +159,68 @@
                 </div>
             </div>
         </section>
+        <section class="w3l-features-5">
+            <div class="features">
+                <div class="wrapper">
+                    <div class="d-grid">
+                        <div class="feature">
+                            <a href="./assets/parks/daytour.html">
+                                <div class="icon-bg">
+                                    <span class="fa fa-thumbs-o-up" aria-hidden="true"></span>
+                                </div>
+                                <p>We offer day tours</p>
+                            </a>
+                        </div>
+                        <div class="feature">
+                            <a href="./assets/parks/cycling.html">
+                                <div class="icon-bg">
+                                    <span class="fa fa-bicycle" aria-hidden="true"></span>
+                                </div>
+                                <p>Cycling trips</p>
+                            </a>
+                        </div>
+                        <div class="feature">
+                            <a href="Zanzibar.html">
+                                <div class="icon-bg">
+                                    <span class="fa fa-clipboard" aria-hidden="true"></span>
+                                </div>
+                                <p>Beach tours</hp>
+                            </a>
+                        </div>
+                        <div class="feature">
+                            <a href="Tanzania.html">
+                                <div class="icon-bg">
+                                    <span class="fa fa-globe" aria-hidden="true"></span>
+                                </div>
+                                <p>Destinations</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="w3l-call-to-action-29">
+            <div class="cal-action-29">
+                <div class="wrapper">
+                    <div class="action-main-29 align-center">
+                        <h4 class="cal-action-text-29">
+                            Buy a Tour Safari have a new life Experience
+                        </h4>
+                        <p>If you are ever looking for a places to stay in your vacation, Kilimangeti Tanzania Safari have you
+                            covered. We have the most affordable price for our safari packages </p>
+                                <br>
+                                <br>
+                                <p>Need some more informationsabout the Tour ? Reach us out or call us and we will give you everything you need to get
+                                    started on this tour 
+                                </p>
+                        <a href="book.html" class="buttonbg">Book Now</a>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
+        <!-- teams 32 block -->
+        <!-- w3l-features-5 -->
         <!-- //teams 32 block -->
         <section class="w3l-footer-16">
             <!-- w3l-footer-16 -->
