--- a/assets/parks/daytour.html
+++ b/assets/parks/daytour.html
@@ -114,7 +114,6 @@
                                         <input type="checkbox" id="drop-4" />
                                         <ul>
                                             <li><a href="./daytour.html">Day Tour</a></li>
-                                            <li><a href="./cycling.html">Cycling Tour </a></li>
                                             <li><a href="../../Maasai.html">Maasai Cultural Tour</a></li>
                                         </ul>
                                     </li>
@@ -152,61 +151,62 @@
                     <h3 class="title-main">DAY TOURS SAFARIS</h3>
                     <div class="d-grid grid-column-3">
                         <div class="gd-innf" data-aos="fade-up">
-                            <a href="./assets/parks/ArushaPark.html">
+                            <a href="/assets/parks/tarangirePark.html">
                                 <img class="img-responsive" 
-                                src="../../assets/parks/DayTours/images/img1.jpg" alt="image"></a>
-                            <p><a href="./assets/parks/ArushaPark.html" class="vv-link">Tarangire National Park day Tour.</a></p>
+                                src="../../assets/parks/DayTours/images/img1.jpg" alt="image">
+                            </a>
+                            <p><a href="/assets/parks/tarangirePark.html" class="vv-link">Tarangire National Park day Tour.</a></p>
                         </div>
                         <div class="gd-innf">
-                            <a href=""><img class="img-responsive"
+                            <a href="/assets/parks/lmanyara.html"><img class="img-responsive"
                                     src="../../assets/parks/DayTours/images/img3.png" alt="image"></a>
-                            <p><a href="./assets/parks/serengetiPark.html" class="vv-link">Lake Manyara National Park Day Tour</a>
+                            <p><a href="/assets/parks/lmanyara.html" class="vv-link">Lake Manyara National Park Day Tour</a>
                             </p>
                         </div>
                         <div class="gd-innf" data-aos="fade-up">
-                            <a href="kilimanjaro.html">
+                            <a href="../parks/DayTours/KilimanjaroDayTrip.html">
                                 <img class="img-responsive" 
                                 src="../../assets/parks/DayTours/images/img6.jpg"
                                     alt="image"></a>
-                            <p><a href="kilimanjaro.html" class="vv-link">Kilimanjaro National Park Day Hike Tour</a></p>
+                            <p><a href="../parks/DayTours/KilimanjaroDayTrip.html" class="vv-link">Kilimanjaro National Park Day Hike Tour</a></p>
                         </div>
                     </div>
                     <div class="d-grid grid-column-3 second-grids">
                         <div class="gd-innf" data-aos="fade-up">
-                            <a href="./assets/parks/ngorongoroPark.html"><img class="img-responsive"
+                            <a href="/assets/parks/ngorongoroPark.html"><img class="img-responsive"
                                     src="../../assets/parks/DayTours/images/img5.jpg" alt="image"></a>
-                            <p><a href="./assets/parks/ngorongoroPark.html" class="vv-link">Ngorongoro Crater Tour day Trip</a></p>
+                            <p><a href="ngorongoroPark.html" class="vv-link">Ngorongoro Crater Tour day Trip</a></p>
                         </div>
                         <div class="gd-innf">
-                            <a href="./assets/parks/lmanyara.html"><img class="img-responsive" 
+                            <a href="/assets/parks/Natron.html"><img class="img-responsive" 
                                 src="../../assets/parks/DayTours/images/img4.jpg"
                                     alt="image"></a>
-                            <p><a href="./assets/parks/lmanyara.html" class="vv-link">Lake Natron Day Trip</a>
+                            <p><a href="/assets/parks/Natron.html" class="vv-link">Lake Natron Day Trip</a>
                             </p>
                         </div>
                         <div class="gd-innf" data-aos="fade-left">
-                            <a href="./assets/parks/tarangirePark.html"><img class="img-responsive"
+                            <a href="/assets/parks/ArushaPark.html"><img class="img-responsive"
                                     src="../../assets/parks/DayTours/images/pa1.jpg" alt="image"></a>
-                            <p><a href="./assets/parks/tarangirePark.html" class="vv-link">Arusha National Park</a>
+                            <p><a href="/assets/parks/ArushaPark.html" class="vv-link">Arusha National Park</a>
                             </p>
                         </div>
                     </div>
                   <div class="row_day">
-                      <div class="col-1" data-aos="fade-right">
-                        <a href="./assets/parks/tarangirePark.html">
+                       <div class="col-1" data-aos="fade-right">
+                         <a href="/assets/parks/Waterfalls.html">
                             <img class="img-responsive" src="../../assets/parks/DayTours/images/materuni-waterfall.jpg"
                                 alt="image">
                             </a>
-                        <p>
-                            <a href="./assets/parks/tarangirePark.html" class="vv-link">Waterfalls Trip</a>
-                        </p>
+                          <p>
+                            <a href="/assets/parks/Waterfalls.html" class="vv-link">Waterfalls Trip</a>
+                          </p>
                       </div>
                     <div class="col-2" data-aos="fade-up">
-                    <a href="./assets/parks/tarangirePark.html">
+                    <a href="/assets/parks/Kikuletwa.html">
                         <img class="img-responsive" src="../../assets/parks/DayTours/images/Kikuletwa.jpg"
                             alt="image"></a>
                     <p>
-                        <a href="./assets/parks/tarangirePark.html" class="vv-link">Kikuletwa hot spring day</a>
+                        <a href="/assets/parks/Kikuletwa.html" class="vv-link">Kikuletwa hot spring day</a>
                     </p>
                     </div>
                   </div>
@@ -214,24 +214,20 @@
             </div>
             <!-- //grids -->
         </section>
-        <!-- Call to action 29 block -->
         <section class="w3l-call-to-action-29">
             <div class="cal-action-29">
                 <div class="wrapper">
                     <div class="action-main-29 align-center">
                         <h4 class="cal-action-text-29">
-                            <a href="book.html">Buy a Tour Without Leaving Your Home</a>
+                            Buy a Tour Safari have a new life Experience
                         </h4>
-                        <p class="sub-paragraph actioncall-29">Using our Kilimangeti Tanzania Safari, you can easily
-                            find and book any tour
-                            you
-                            want. Mobile users will definitely enjoy our app available on all devices.</p>
-                        <a href="book.html" class="buttonbg">Book Now</a>
+                        <p>If you are ever looking for a places to stay in your vacation, Kilimangeti Tanzania Safari have you
+                            covered. We have the most affordable price for our safari packages </p>
+                        <a href="../../book.html" class="buttonbg">Book Now</a>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- //w3l-text-22 -->
         <!-- Text14 block -->
         <section class="w3l-footer-16">
             <!-- w3l-footer-16 -->
