--- a/assets/parks/z2.html
+++ b/assets/parks/z2.html
@@ -110,7 +110,7 @@
                                         <ul>
                                             <li><a href="../../kilimanjaro.html"> Mount Kilimanjaro</a></li>
                                             <li><a href="../../meruclimb.html">Mount Meru </a></li>
-                                            <li><a href="../../kilimanjaro.html">What to Know for Kilimanjaro climb</a>
+                                            <li><a href="../../whatforkili.html">What to Know for Kilimanjaro climb</a>
                                             </li>
 
                                         </ul>
@@ -123,11 +123,10 @@
                                         <input type="checkbox" id="drop-4" />
                                         <ul>
                                             <li><a href="../parks/daytour.html">Day Tour</a></li>
-                                            <li><a href="../parks/cycling.html">Cycling Tour </a></li>
                                             <li><a href="../../Maasai.html">Maasai Cultural Tour</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="../../book.html" class="link-nav">Contact</a></li>
+                                    <li><a href="../../contact.html" class="link-nav">Contact</a></li>
                                     <li class="nav-right-sty">
                                         <a href="../../book.html" class="actionbg">Book Now</a>
                                     </li>
