--- a/index.html
+++ b/index.html
@@ -113,7 +113,6 @@
                                         <input type="checkbox" id="drop-4" />
                                         <ul>
                                             <li><a href="./assets/parks/daytour.html">Day Tour</a></li>
-                                            <li><a href="./assets/parks/cycling.html">Cycling Tour </a></li>
                                             <li><a href="Maasai.html">Maasai Cultural Tour</a></li>
                                         </ul>
                                     </li>
@@ -191,7 +190,7 @@
                 </div>
                 <div class="gd-innf" data-aos="fade-up">
                     <a href="Tanzania.html">
-                        <img class="img-responsive" src="assets/destinations/da2.jpg" alt="image"></a>
+                        <img class="img-responsive" src="assets/parks/images/pa3.jpg" alt="image"></a>
                     <p><a href="Tanzania.html" class="vv-link">Tanzania Destinations</a></p>
                 </div>
             </div>
@@ -342,7 +341,7 @@
                                 <li><a href="#privacy">Privacy Policy</a></li>
                             </ul>
                         </div>
-                        <div class="column column4">
+                        <div class="column card_payment column4">
                             <img class="cards" src="./assets/parks/images/visa.svg" alt="cards">
                             <img class="cards" src="./assets/parks/images/amex.svg" alt="cards">
                             <img class="cards" src="./assets/parks/images/mastercard.svg" alt="cards">
