--- a/meruclimb.html
+++ b/meruclimb.html
@@ -8,6 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> Kilimangeti Tanzania Safari</title>
     <link rel="stylesheet" href="assets/css/style-freedom.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 
 <body>
@@ -66,11 +68,11 @@
                     <div class="header">
                         <div>
                             <h1>
-                                <a href="index.html" class="logo">Kilimangeti Tanzania Safari</a>
+                                <a href="index.html" class="logo">Kilimangeti Safaris</a>
                                 <!-- if logo is image enable this   
-						<a class="logo" href="index.html">
-							<img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
-						</a> -->
+        						<a class="logo" href="index.html">
+        							<img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
+        						</a> -->
                             </h1>
                         </div>
                         <div class="bottom-menu-content">
@@ -82,8 +84,8 @@
                                     <li><a href="about.html" class="link-nav">About</a></li>
                                     <li>
                                         <!-- First Tier Drop Down -->
-                                        <label for="drop-2" class="toggle toogle-2">Safaris <span
-                                                class="fa fa-angle-down" aria-hidden="true"></span></label>
+                                        <label for="drop-2" class="toggle toogle-2">Safaris <span class="fa fa-angle-down"
+                                                aria-hidden="true"></span></label>
                                         <a href="#safaris" class="link-nav dropdown-toggle">Safaris <span
                                                 class="fa fa-angle-down" aria-hidden="true"></span></a>
                                         <input type="checkbox" id="drop-2" />
@@ -101,19 +103,19 @@
                                         <input type="checkbox" id="drop-3" />
                                         <ul>
                                             <li><a href="kilimanjaro.html"> Mount Kilimanjaro</a></li>
-                                            <li><a href="meruclimb.html">Mount Meru </a></li>
+                                            <li><a href="whatforkili.html"> What for Kili</a></li>
+                                            <li><a href="meruclimb.html"> Mount Meru </a></li>
                                         </ul>
                                     </li>
                                     <li>
                                         <label for="drop-4" class="toggle toogle-2">Tours <span class="fa fa-angle-down"
                                                 aria-hidden="true"></span></label>
-                                        <a href="#shop" class="link-nav dropdown-toggle">Tours <span
-                                                class="fa fa-angle-down" aria-hidden="true"></span></a>
+                                        <a href="#shop" class="link-nav dropdown-toggle">Tours <span class="fa fa-angle-down"
+                                                aria-hidden="true"></span></a>
                                         <input type="checkbox" id="drop-4" />
                                         <ul>
-                                            <li><a href="Kili-what to know.html">Day Tour</a></li>
-                                            <li><a href="Kili-what to know-single.html">Cycling Tour </a></li>
-                                            <li><a href="Kili-what to know-cart.html">Maasai Cultural Tour</a></li>
+                                            <li><a href="./assets/parks/daytour.html">Day Tour</a></li>
+                                            <li><a href="Maasai.html">Maasai Cultural Tour</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="contact.html" class="link-nav">Contact</a></li>
@@ -135,88 +137,63 @@
                     <ul class="breadcrumbs-custom-path">
                         <li><a href="index.html">Home <span class="fa fa-angle-right" aria-hidden="true"></span></a>
                         </li>
-                        <li><a href="#pages">Safaris <span class="fa fa-angle-right" aria-hidden="true"></span></a></li>
-                        <li class="active">Zanzibar</li>
+                        <li><a href="#pages">Mountain Trekking <span class="fa fa-angle-right" aria-hidden="true"></span></a></li>
+                        <li class="active">Meru Climb</li>
                     </ul>
                 </div>
             </div>
         </section>
         <!-- //covers -->
+        <div class="heading_kili">
+            <h3 class="title-main">CLIMBING MOUNT MERU</h3>
+            <div class="d-flex">
+                <p>We offers an exceptional product for small groups or individuals wanting to climb Kilimanjaro. This
+                    package includes transport and accomodation before and after the ascent to Kilimanjaro.</p>
+                <p>All our climbs are guaranteed, so a registration is enough to guarantee the climb. The maximum number
+                    of
+                    people in each
+                    group is 12 people. It is therefore small groups facilitating the customization of the service.
+                    If desired, the group can be provided with a French speaking guide in the ascent, at no additional
+                    cost.
+                </p>
+            </div>
+        </div>
         <!-- w3l-text-22 -->
-        <div class="zanzibar">
-            <div class="zanzibar_items">
-                <div class="gd-innf">
-                    <img class="img-responsive" src="assets/parks/images/z1.jpg" alt="image">
-                </div>
-                <div class="zanzibar_item">
-                    <h3>Zanzibar</h3>
-                    <p>Where better to go after an action-packed wildlife safari or a tough Kilimanjaro climb? Zanzibar
-                        is a tropical paradise
-                        just off the coast from Dar es Salaam. Imagine endless blue skies, stunning white sand beaches
-                        framed by whispering palm
-                        trees dancing to the rhythm of African drum beats long into the night. Zanzibar is also often
-                        described as a ‘cultural
-                        melting-pot’, owing to the various different people who have settled here over the ages – all of
-                        which have all left
-                        their mark in one way or another. From the bustle of the bazaars to the</p>
-                </div>
+    <section >
+        <div class="row d-flex meru">
+            <div class="col-md-3">
+                <img class="img-fluid" src="assets/parks/images/meru1.jpg" alt="image"></a>
             </div>
-            <div class="zanzibar_items">
-                <div class="gd-innf">
-                    <img class="img-responsive" src="assets/parks/images/z2.jpg" alt="image">
-                </div>
-                <div class="zanzibar_item">
-                    <h3>Stone Town</h3>
-                    <p>Where better to go after an action-packed wildlife safari or a tough Kilimanjaro climb? Zanzibar
-                        is a
-                        tropical paradise
-                        just off the coast from Dar es Salaam. Imagine endless blue skies, stunning white sand beaches
-                        framed by
-                        whispering palm
-                        trees dancing to the rhythm of African drum beats long into the night. Zanzibar is also often
-                        described as a
-                        ‘cultural
-                        melting-pot’, owing to the various different people who have settled here over the ages – all of
-                        which have
-                        all left
-                        their mark in one way or another. From the bustle of the bazaars to the</p>
-                </div>
+            <div class="col-md-7">
+                <h4>Climb Mount Meru (3 days)</h4>
+                <p>
+                Explore mount Meru, one of Tanzania’s and Africa’s wonders. During your climb, you will enjoy the view of the landscape
+                and animals of the Arusha National Park. In the morning, you will be brought from your hotel to the entrance of Arusha
+                National Park, then you will leave at the entrance of Momella.</p>
+                <button class="kili_link">
+                    <a href="/assets/parks/Meru/meru1.html">Read More</a>
+                </button>
             </div>
         </div>
-        <div class="zanzibar">
-            <div class="zanzibar_items">
-                <div class="gd-innf">
-                    <img class="img-responsive" src="assets/parks/images/z3.jpg" alt="image">
-                </div>
-                <div class="zanzibar_item">
-                    <h3>Spice Tours</h3>
-                    <p>With over 1,200 years of interesting and culturally diverse history, Stone Town is a unique place
-                        that is a must-visit
-                        for anyone planning a trip to Zanzibar. Walk around and you’ll see shutters hanging off their
-                        hinges, paint peeling from
-                        the walls and urban decay where there was once extravagant facades. But despite the years and
-                        years of deterioration,
-                        you can’t help but feel this adds to the town’s magical charm.</p>
-                </div>
-            </div>
-            <div class="zanzibar_items">
-                <div class="gd-innf">
-                    <img class="img-responsive" src="assets/parks/images/z4.jpg" alt="image">
-                </div>
-                <div class="zanzibar_item">
-                    <h3>Changuu (Prison Island)</h3>
-                    <p>Where better to go after an action-packed wildlife safari or a tough Kilimanjaro climb? Zanzibar
-                        is a tropical paradise
-                        just off the coast from Dar es Salaam. Imagine endless blue skies, stunning white sand beaches
-                        framed by whispering palm
-                        trees dancing to the rhythm of African drum beats long into the night. Zanzibar is also often
-                        described as a ‘cultural
-                        melting-pot’, owing to the various different people who have settled here over the ages – all of
-                        which have all left
-                        their mark in one way or another. From the bustle of the bazaars to the</p>
-                </div>
-            </div>
+    </section>
+<section class="hotel_content_kili">
+    <div class="row d-flex meru">
+        <div class="col-md-7">
+            <h4>Climb Mount Meru (4 days)</h4>
+            <p>Explore mount Meru, one of Tanzania’s and Africa’s wonders. During your climb, you will enjoy the view of the landscape
+            and animals of the Arusha National Park.
+            Arusha – Momella Gate (1500m) – Miriakamba Hut (2500m) In the morning you will be brought from your hotel to the
+            entrance to the Arusha National Park, then you will leave at the entrance of Momella.</p>
+            <button class="kili_link">
+                <a href="./assets/parks/Meru/meru2.html">Read More</a>
+            </button>
         </div>
+        <div class="col-md-3">
+            <img class="img-responsive"  style="height: 300px; width: 400px;"
+             src="./assets/parks/images/meru2.jpg" alt="image"></a>
+        </div>
+    </div>
+</section>
         <!-- Text14 block -->
         <section class="w3l-footer-16">
             <!-- w3l-footer-16 -->
