--- a/gallery.html
+++ b/gallery.html
@@ -62,95 +62,83 @@
         ga('require', 'urlChangeTracker');
         ga('send', 'pageview');
     </script>
-    <script async src='../../../../../../js/autotrack.js'></script>
+   
 
     <meta name="robots" content="noindex">
 
     <body>
-        <link rel="stylesheet" href="../../../../../../images/ Kilimangeti Tanzania Safari.css">
-        <!-- header -->
-        <div class="w3l-headers-9">
-            <header>
-                <div class="wrapper">
-                    <div class="header">
-                        <div>
-                            <h1>
-                                <a href="index.html" class="logo">Kilimangeti Tanzania Safari</a>
-                                <!-- if logo is image enable this   
-						<a class="logo" href="index.html">
-							<img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
-						</a> -->
-                            </h1>
-                        </div>
-                        <div class="bottom-menu-content">
-                            <input type="checkbox" id="nav" />
-                            <label for="nav" class="menu-bar"></label>
-                            <nav>
-                                <ul class="menu">
-                                    <li><a href="index.html" class="link-nav">Home</a></li>
-                                    <li><a href="about.html" class="link-nav">About</a></li>
-                                    <li><a href="services.html" class="link-nav">Services</a></li>
-                                    <li>
-                                        <!-- First Tier Drop Down -->
-                                        <label for="drop-2" class="toggle toogle-2">Safaris <span
-                                                class="fa fa-angle-down" aria-hidden="true"></span></label>
-                                        <a href="#pages" class="link-nav dropdown-toggle">Safaris <span
-                                                class="fa fa-angle-down" aria-hidden="true"></span></a>
-                                        <input type="checkbox" id="drop-2" />
-                                        <ul class="first-dropdwon">
-                                            <li><a href="pricing.html">Pricing</a></li>
-                                            <li><a href="gallery.html">Gallery</a></li>
-                                            <li><a href="team.html">Team</a></li>
-                                            <li><a href="team-single.html">Team Member</a></li>
-                                            <li><a href="timeline.html">Timeline</a></li>
-                                            <li><a href="faq.html">Faq</a></li>
-                                            <li><a href="coming-soon.html">Coming Soon</a></li>
-                                            <li><a href="404.html">404</a></li>
-                                            <li><a href="search-results.html">Search Results</a></li>
-                                            <li><a href="login.html">Login</a></li>
-                                            <li><a href="signup.html">Signup</a></li>
-                                            <li><a href="single.html">Single Page</a></li>
-                                            <li><a href="portfolio.html">Portfolio</a></li>
-                                            <li><a href="portfolio-single.html">Portfolio Single</a></li>
-                                            <li><a href="email-template.html">Email Template</a></li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <label for="drop-3" class="toggle toogle-2">Blog <span class="fa fa-angle-down"
-                                                aria-hidden="true"></span></label>
-                                        <a href="#blog" class="link-nav dropdown-toggle">Blog <span
-                                                class="fa fa-angle-down" aria-hidden="true"></span></a>
-                                        <input type="checkbox" id="drop-3" />
-                                        <ul>
-                                            <li><a href="blog.html">Blog</a></li>
-                                            <li><a href="blog-single.html">Blog Single</a></li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <label for="drop-4" class="toggle toogle-2">Shop <span class="fa fa-angle-down"
-                                                aria-hidden="true"></span></label>
-                                        <a href="#shop" class="link-nav dropdown-toggle">Shop <span
-                                                class="fa fa-angle-down" aria-hidden="true"></span></a>
-                                        <input type="checkbox" id="drop-4" />
-                                        <ul>
-                                            <li><a href="Kili-what to know.html">Kili-what to know</a></li>
-                                            <li><a href="Kili-what to know-single.html">Kili-what to know Single</a>
-                                            </li>
-                                            <li><a href="Kili-what to know-cart.html">Kili-what to know Cart</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="contact.html" class="link-nav">Contact</a></li>
-                                    <li class="nav-right-sty">
-                                        <a href="book.html" class="actionbg">Book Now</a>
-                                    </li>
-                                </ul>
-                            </nav>
+       
+            <!-- header -->
+            <div class="w3l-headers-9">
+                <header>
+                    <div class="wrapper">
+                        <div class="header">
+                            <div>
+                                <h1>
+                                    <a href="index.html" class="logo">Kilimangeti Safaris</a>
+                                    <!-- if logo is image enable this   
+            						<a class="logo" href="index.html">
+            							<img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
+            						</a> -->
+                                </h1>
+                            </div>
+                            <div class="bottom-menu-content">
+                                <input type="checkbox" id="nav" />
+                                <label for="nav" class="menu-bar"></label>
+                                <nav>
+                                    <ul class="menu">
+                                        <li><a href="index.html" class="link-nav">Home</a></li>
+                                        <li><a href="about.html" class="link-nav">About</a></li>
+                                        <li>
+                                            <!-- First Tier Drop Down -->
+                                            <label for="drop-2" class="toggle toogle-2">Safaris <span class="fa fa-angle-down"
+                                                    aria-hidden="true"></span></label>
+                                            <a href="#safaris" class="link-nav dropdown-toggle">Safaris <span
+                                                    class="fa fa-angle-down" aria-hidden="true"></span></a>
+                                            <input type="checkbox" id="drop-2" />
+                                            <ul class="first-dropdwon">
+                                                <li><a href="Tanzania.html">Tanzania</a></li>
+                                                <li><a href="Zanzibar.html">Zanzibar</a></li>
+                                                <li><a href="Kenya.html">Kenya</a></li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <label for="drop-3" class="toggle toogle-2">Mountain Trekking <span
+                                                    class="fa fa-angle-down" aria-hidden="true"></span></label>
+                                            <a href="#blog" class="link-nav dropdown-toggle">Mountain Trekking <span
+                                                    class="fa fa-angle-down" aria-hidden="true"></span></a>
+                                            <input type="checkbox" id="drop-3" />
+                                            <ul>
+                                                <li><a href="kilimanjaro.html"> Mount Kilimanjaro</a></li>
+                                                <li><a href="whatforkili.html"> What for Kili</a></li>
+                                                <li><a href="meruclimb.html"> Mount Meru </a></li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <label for="drop-4" class="toggle toogle-2">Tours <span class="fa fa-angle-down"
+                                                    aria-hidden="true"></span></label>
+                                            <a href="#shop" class="link-nav dropdown-toggle">Tours <span class="fa fa-angle-down"
+                                                    aria-hidden="true"></span></a>
+                                            <input type="checkbox" id="drop-4" />
+                                            <ul>
+                                                <li><a href="./assets/parks/daytour.html">Day Tour</a></li>
+                                                <li><a href="./assets/parks/cycling.html">Cycling Tour </a></li>
+                                                <li><a href="Maasai.html">Maasai Cultural Tour</a></li>
+                                            </ul>
+                                        </li>
+                                        <li><a href="contact.html" class="link-nav">Contact</a></li>
+                                        <li class="nav-right-sty">
+                                            <a href="book.html" class="actionbg">Book Now</a>
+                                        </li>
+                                    </ul>
+                                </nav>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </header>
-            <!-- //header -->
+                </header>
+                <!-- //header -->
         </div>
+
         <!-- inner banner -->
         <section class="w3l-inner-banner-main">
             <div class="banner-9 sec-img">
@@ -158,7 +146,7 @@
                     <ul class="breadcrumbs-custom-path">
                         <li><a href="index.html">Home <span class="fa fa-angle-right" aria-hidden="true"></span></a>
                         </li>
-                        <li><a href="#pages">Pages <span class="fa fa-angle-right" aria-hidden="true"></span></a></li>
+                        <li><a href="#pages">Safaris <span class="fa fa-angle-right" aria-hidden="true"></span></a></li>
                         <li class="active">Gallery</li>
                     </ul>
                 </div>
@@ -196,7 +184,8 @@
                     <div class="grid">
                         <div class="column">
                             <h2><a href="index.html" class="logo-2">Kilimangeti Tanzania Safari</a></h2>
-                            <p>All rights reserved.<br>©2019 <a href="http://Kilimangeti Tanzania Safari.com/"
+                            <p>All rights reserved.<br>©2021 
+                                <a href="http://Kilimangeti Tanzania Safari.com/"
                                     target="_blank">Kilimangeti Tanzania Safari</a>
                             </p>
                         </div>
