--- a/kilimanjaro.html
+++ b/kilimanjaro.html
@@ -76,7 +76,7 @@
 						<a class="logo" href="index.html">
 							<img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
 						</a> -->
-                            </h1>
+                           </h1>
                         </div>
                         <div class="bottom-menu-content">
                             <input type="checkbox" id="nav" />
@@ -95,6 +95,7 @@
                                         <ul class="first-dropdwon">
                                             <li><a href="Tanzania.html">Tanzania</a></li>
                                             <li><a href="Zanzibar.html">Zanzibar</a></li>
+                                            <li><a href="Kenya.html">Kenya</a></li>
                                         </ul>
                                     </li>
                                     <li>
@@ -105,6 +106,7 @@
                                         <input type="checkbox" id="drop-3" />
                                         <ul>
                                             <li><a href="kilimanjaro.html"> Mount Kilimanjaro</a></li>
+                                            <li><a href="whatforkili.html"> whatforkili</a></li>
                                             <li><a href="meruclimb.html">Mount Meru </a></li>
                                         </ul>
                                     </li>
@@ -115,14 +117,13 @@
                                                 class="fa fa-angle-down" aria-hidden="true"></span></a>
                                         <input type="checkbox" id="drop-4" />
                                         <ul>
-                                            <li><a href="Kili-what to know.html">Day Tour</a></li>
-                                            <li><a href="Kili-what to know-single.html">Cycling Tour </a></li>
-                                            <li><a href="Kili-what to know-cart.html">Maasai Cultural Tour</a></li>
+                                            <li><a href="./assets/parks/daytour.html">Day Tour</a></li>
+                                            <li><a href="./Maasai.html">Maasai Cultural Tour</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="contact.html" class="link-nav">Contact</a></li>
                                     <li class="nav-right-sty">
-                                        <a href="book.html" class="actionbg">Book Now</a>
+                                        <a href="./book.html" class="actionbg">Book Now</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -133,23 +134,40 @@
             <!-- //header -->
         </div>
         <!-- inner banner -->
-        <section class="w3l-inner-banner-main">
-            <div class="banner-9">
-                <div class="wrapper">
-                    <ul class="breadcrumbs-custom-path">
-                        <li><a href="index.html">Home <span class="fa fa-angle-right" aria-hidden="true"></span></a>
-                        </li>
-                        <li><a href="#pages">Mountain Trecking <span class="fa fa-angle-right"
-                                    aria-hidden="true"></span></a></li>
-                        <li class="active">Kilimanjaro</li>
-                    </ul>
+        <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselIndicators" data-slide-to="3"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item  active">
+                    <img class="d-block w-100" src="/assets/parks/DayTours/images/Ar1.jpg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="/assets/parks/images/k1.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="/assets/parks/images/k2.jpg" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="/assets/parks/images/k5.jpg" alt="Third slide">
                 </div>
             </div>
-        </section>
+            <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
         <!-- //covers -->
         <!-- w3l-text-22 -->
         <div class="heading_kili">
-            <h4>Climbing Mount Kilimanjaro</h4>
+            <h3 class="title-main">CLIMBING MOUNT KILIMANJARO</h3>
             <div class="d-flex">
                 <p>We offers an exceptional product for small groups or individuals wanting to climb Kilimanjaro. This
                     package includes transport and accomodation before and after the ascent to Kilimanjaro.</p>
