--- a/team.html
+++ b/team.html
@@ -59,76 +59,75 @@
 
     <body>
         <link rel="stylesheet" href="../../../../../../images/ Kilimangeti Tanzania Safari.css">
-        <!-- header -->
-        <div class="w3l-headers-9">
-            <header>
-                <div class="wrapper">
-                    <div class="header">
-                        <div>
-                            <h1>
-                                <a href="index.html" class="logo">Kilimangeti Tanzania Safari</a>
-                                <!-- if logo is image enable this   
-						<a class="logo" href="index.html">
-							<img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
-						</a> -->
-                            </h1>
+                <!-- header -->
+                <div class="w3l-headers-9">
+                    <header>
+                        <div class="wrapper">
+                            <div class="header">
+                                <div>
+                                    <h1>
+                                        <a href="index.html" class="logo">Kilimangeti Safaris</a>
+                                        <!-- if logo is image enable this   
+                						<a class="logo" href="index.html">
+                							<img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
+                						</a> -->
+                                    </h1>
+                                </div>
+                                <div class="bottom-menu-content">
+                                    <input type="checkbox" id="nav" />
+                                    <label for="nav" class="menu-bar"></label>
+                                    <nav>
+                                        <ul class="menu">
+                                            <li><a href="index.html" class="link-nav">Home</a></li>
+                                            <li><a href="about.html" class="link-nav">About</a></li>
+                                            <li>
+                                                <!-- First Tier Drop Down -->
+                                                <label for="drop-2" class="toggle toogle-2">Safaris <span class="fa fa-angle-down"
+                                                        aria-hidden="true"></span></label>
+                                                <a href="#safaris" class="link-nav dropdown-toggle">Safaris <span
+                                                        class="fa fa-angle-down" aria-hidden="true"></span></a>
+                                                <input type="checkbox" id="drop-2" />
+                                                <ul class="first-dropdwon">
+                                                    <li><a href="Tanzania.html">Tanzania</a></li>
+                                                    <li><a href="Zanzibar.html">Zanzibar</a></li>
+                                                    <li><a href="Kenya.html">Kenya</a></li>
+                                                </ul>
+                                            </li>
+                                            <li>
+                                                <label for="drop-3" class="toggle toogle-2">Mountain Trekking <span
+                                                        class="fa fa-angle-down" aria-hidden="true"></span></label>
+                                                <a href="#blog" class="link-nav dropdown-toggle">Mountain Trekking <span
+                                                        class="fa fa-angle-down" aria-hidden="true"></span></a>
+                                                <input type="checkbox" id="drop-3" />
+                                                <ul>
+                                                    <li><a href="kilimanjaro.html"> Mount Kilimanjaro</a></li>
+                                                    <li><a href="whatforkili.html"> What for Kili</a></li>
+                                                    <li><a href="meruclimb.html"> Mount Meru </a></li>
+                                                </ul>
+                                            </li>
+                                            <li>
+                                                <label for="drop-4" class="toggle toogle-2">Tours <span class="fa fa-angle-down"
+                                                        aria-hidden="true"></span></label>
+                                                <a href="#shop" class="link-nav dropdown-toggle">Tours <span class="fa fa-angle-down"
+                                                        aria-hidden="true"></span></a>
+                                                <input type="checkbox" id="drop-4" />
+                                                <ul>
+                                                    <li><a href="./assets/parks/daytour.html">Day Tour</a></li>
+                                                    <li><a href="Maasai.html">Maasai Cultural Tour</a></li>
+                                                </ul>
+                                            </li>
+                                            <li><a href="contact.html" class="link-nav">Contact</a></li>
+                                            <li class="nav-right-sty">
+                                                <a href="book.html" class="actionbg">Book Now</a>
+                                            </li>
+                                        </ul>
+                                    </nav>
+                                </div>
+                            </div>
                         </div>
-                        <div class="bottom-menu-content">
-                            <input type="checkbox" id="nav" />
-                            <label for="nav" class="menu-bar"></label>
-                            <nav>
-                                <ul class="menu">
-                                    <li><a href="index.html" class="link-nav">Home</a></li>
-                                    <li><a href="about.html" class="link-nav">About</a></li>
-                                    <li><a href="services.html">Services</a></li>
-                                    <li>
-                                        <!-- First Tier Drop Down -->
-                                        <label for="drop-2" class="toggle toogle-2">Safaris <span
-                                                class="fa fa-angle-down" aria-hidden="true"></span></label>
-                                        <a href="#safaris" class="link-nav dropdown-toggle">Safaris <span
-                                                class="fa fa-angle-down" aria-hidden="true"></span></a>
-                                        <input type="checkbox" id="drop-2" />
-                                        <ul class="first-dropdwon">
-                                            <li><a href="Tanzania.html">Tanzania</a></li>
-                                            <li><a href="Zanzibar.html">Zanzibar</a></li>
-                                            <li><a href="Kenya.html">Kenya</a></li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <label for="drop-3" class="toggle toogle-2">Mountain Trekking <span
-                                                class="fa fa-angle-down" aria-hidden="true"></span></label>
-                                        <a href="#blog" class="link-nav dropdown-toggle">Mountain Trekking <span
-                                                class="fa fa-angle-down" aria-hidden="true"></span></a>
-                                        <input type="checkbox" id="drop-3" />
-                                        <ul>
-                                            <li><a href="kilimanjaro.html"> Mount Kilimanjaro</a></li>
-                                            <li><a href="meruclimb.html">Mount Meru </a></li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <label for="drop-4" class="toggle toogle-2">Tours <span class="fa fa-angle-down"
-                                                aria-hidden="true"></span></label>
-                                        <a href="#shop" class="link-nav dropdown-toggle">Tours <span
-                                                class="fa fa-angle-down" aria-hidden="true"></span></a>
-                                        <input type="checkbox" id="drop-4" />
-                                        <ul>
-                                            <li><a href="Kili-what to know.html">Day Tour</a></li>
-                                            <li><a href="Kili-what to know-single.html">Cycling Tour </a></li>
-                                            <li><a href="Kili-what to know-cart.html">Maasai Cultural Tour</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="contact.html" class="link-nav">Contact</a></li>
-                                    <li class="nav-right-sty">
-                                        <a href="book.html" class="actionbg">Book Now</a>
-                                    </li>
-                                </ul>
-                            </nav>
-                        </div>
-                    </div>
+                    </header>
+                    <!-- //header -->
                 </div>
-            </header>
-            <!-- //header -->
-        </div>
         <!-- inner banner -->
         <section class="w3l-inner-banner-main">
             <div class="banner-9">
