Adding Zanzibar Details Page

--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
                     <p><a href="Zanzibar.html" class="vv-link">Zanzibar Beaches</a></p>
                 </div>
                 <div class="gd-innf">
-                    <a href="./assets/parks/cycling.html"><img class="img-responsive" src="assets/destinations/da5.jpg"
+                    <a href="./Kenya.html"><img class="img-responsive" src="assets/parks/images/kenya.jpg"
                             alt="image"></a>
-                    <p><a href="./assets/parks/cycling.html" class="vv-link">Cycling Tours</a></p>
+                    <p><a href="./Kenya.html" class="vv-link">Kenya Destinations</a></p>
                 </div>
                 <div class="gd-innf" data-aos="fade-up">
                     <a href="./assets/parks/daytour.html"><img class="img-responsive" src="assets/destinations/da7.jpg"
